force-app/main/default/objects/KimbleOne__CandidateResource__c/KimbleOne__CandidateResource__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Recruitment Candidate</label>
    <nameField>
        <label>Candidate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recruitment Candidates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>