force-app/main/default/objects/KimbleOne__CandidateResource__c/fields/KimbleOne__CandidateStage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CandidateStage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate Stage</label>
    <referenceTo>KimbleOne__CandidateStage__c</referenceTo>
    <relationshipName>CandidateResources</relationshipName>
    <type>Lookup</type>
</CustomField>