force-app/main/default/objects/KimbleOne__CandidateResource__c/fields/KimbleOne__CandidateStatus__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CandidateStatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate Status</label>
    <referenceTo>KimbleOne__CandidateStatus__c</referenceTo>
    <relationshipName>CandidateResources</relationshipName>
    <type>Lookup</type>
</CustomField>