force-app/main/default/objects/KimbleOne__CandidateResource__c/fields/KimbleOne__FirstName__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__FirstName__c</fullName>
    <label>First Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>