force-app/main/default/objects/KimbleOne__CandidateResource__c/fields/KimbleOne__LastName__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__LastName__c</fullName>
    <label>Last Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>