force-app/main/default/objects/KimbleOne__CandidateResource__c/fields/KimbleOne__Resource__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>KimbleOne__Resource__c</referenceTo>
    <relationshipName>CandidateResources</relationshipName>
    <type>Lookup</type>
</CustomField>