force-app/main/default/objects/KimbleOne__CandidateResource__c/fields/KimbleOne__Vacancy__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Vacancy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vacancy</label>
    <referenceTo>KimbleOne__Vacancy__c</referenceTo>
    <relationshipLabel>Recruitment Candidates</relationshipLabel>
    <relationshipName>CandidateResources</relationshipName>
    <type>Lookup</type>
</CustomField>